force-app/main/default/objects/Project__c/fields/Accounts_Head__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Head__c</fullName>
    <label>Accounts Head</label>
    <length>100</length>
    <type>Text</type>
</CustomField>