force-app/main/default/objects/Project__c/fields/Accounts_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Head_Email__c</fullName>
    <label>Accounts Head Email</label>
    <type>Email</type>
</CustomField>