force-app/main/default/objects/Project__c/fields/Accounts_Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Team_Email__c</fullName>
    <label>Accounts Team Email</label>
    <type>Email</type>
</CustomField>