force-app/main/default/objects/Project__c/fields/ADF_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>ADF_Interest_Rate__c</fullName>
    <label>ADF Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>