force-app/main/default/objects/Project__c/fields/ADF_Threshold_Amount__c.field-meta.xml
<CustomField>
    <fullName>ADF_Threshold_Amount__c</fullName>
    <label>ADF Threshold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>