force-app/main/default/objects/Project__c/fields/Ageing_Calculation_Running__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Calculation_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ageing Calculation Running</label>
    <type>Checkbox</type>
</CustomField>