force-app/main/default/objects/Project__c/fields/Allotment_Charges_1__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Charges_1__c</fullName>
    <label>Single Covered Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>