force-app/main/default/objects/Project__c/fields/Allow_Blocking_on_Non_Active_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Allow_Blocking_on_Non_Active_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Blocking on Non Active Opportunity</label>
    <type>Checkbox</type>
</CustomField>