force-app/main/default/objects/Project__c/fields/Allow_Duplicate_Receipts_Printing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicate_Receipts_Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Duplicate Receipts Printing</label>
    <type>Checkbox</type>
</CustomField>