force-app/main/default/objects/Project__c/fields/Allow_Pop_Up_Reminder_For_Dues__c.field-meta.xml
<CustomField>
    <fullName>Allow_Pop_Up_Reminder_For_Dues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Pop Up Reminder For Dues..</label>
    <type>Checkbox</type>
</CustomField>