force-app/main/default/objects/Project__c/fields/Allow_Quotation_Non_Active_Blocking_Info__c.field-meta.xml
<CustomField>
    <fullName>Allow_Quotation_Non_Active_Blocking_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Quotation Non Active Blocking Info</label>
    <type>Checkbox</type>
</CustomField>