force-app/main/default/objects/Project__c/fields/Anarock_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Anarock_Campaign_Id__c</fullName>
    <label>Anarock Campaign Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>