force-app/main/default/objects/Project__c/fields/Auto_Create_Dues__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Dues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Create Dues</label>
    <type>Checkbox</type>
</CustomField>