force-app/main/default/objects/Project__c/fields/Auto_Generate_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generate_Reg_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Generate Reg No</label>
    <type>Checkbox</type>
</CustomField>