force-app/main/default/objects/Project__c/fields/Bank_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Bank_Receipts__c</fullName>
    <label>Bank Receipts</label>
    <length>5</length>
    <type>Text</type>
</CustomField>