force-app/main/default/objects/Project__c/fields/Basement_Assigned1__c.field-meta.xml
<CustomField>
    <fullName>Basement_Assigned1__c</fullName>
    <label>Basement (Assigned)</label>
    <summaryFilterItems>
        <field>Car_Parking_Charge__c.Category__c</field>
        <operation>equals</operation>
        <value>Earmarked</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Car_Parking_Charge__c.Parking__c</field>
        <operation>equals</operation>
        <value>Basement</value>
    </summaryFilterItems>
    <summaryForeignKey>Car_Parking_Charge__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>