force-app/main/default/objects/Project__c/fields/Basement_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Basement_Assigned__c</fullName>
    <label>Basement (Assigned)(Legacy)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>