force-app/main/default/objects/Project__c/fields/Basement_Available1__c.field-meta.xml
<CustomField>
    <fullName>Basement_Available1__c</fullName>
    <formula>Basement_Total__c-(Basement_Booked1__c + Basement_Sold1__c )</formula>
    <label>Basement(Available)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>