force-app/main/default/objects/Project__c/fields/Basement_Booked__c.field-meta.xml
<CustomField>
    <fullName>Basement_Booked__c</fullName>
    <label>Basement (Booked)(Legacy)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>