force-app/main/default/objects/Project__c/fields/Basement_Sold__c.field-meta.xml
<CustomField>
    <fullName>Basement_Sold__c</fullName>
    <label>Basement (Sold)(Legacy)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>