force-app/main/default/objects/Project__c/fields/Booking_Template__c.field-meta.xml
<CustomField>
    <fullName>Booking_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Template</label>
    <referenceTo>Survey_Template__c</referenceTo>
    <relationshipLabel>Projects (Booking Template)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>