force-app/main/default/objects/Project__c/fields/Booking_Terms_Conditions_2__c.field-meta.xml
<CustomField>
    <fullName>Booking_Terms_Conditions_2__c</fullName>
    <label>Booking Terms &amp; Conditions 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>