force-app/main/default/objects/Project__c/fields/Broker_Commision_Slab_1_to_5__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commision_Slab_1_to_5__c</fullName>
    <label>Broker % Commision Slab [1 to 5]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>