force-app/main/default/objects/Project__c/fields/Broker_Commision_Slab_Above_10__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commision_Slab_Above_10__c</fullName>
    <label>Broker % Commision Slab [Above 10]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>