force-app/main/default/objects/Project__c/fields/Brokerage_Payout_Milestone_2__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Payout_Milestone_2__c</fullName>
    <label>Brokerage Payout Milestone 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>