force-app/main/default/objects/Project__c/fields/Calculate_Broker_Adjustment_as_Sum__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Broker_Adjustment_as_Sum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Broker Adjustment as Sum..</label>
    <type>Checkbox</type>
</CustomField>