force-app/main/default/objects/Project__c/fields/Cash_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Cash_Receipts__c</fullName>
    <label>Cash Receipts</label>
    <length>5</length>
    <type>Text</type>
</CustomField>