force-app/main/default/objects/Project__c/fields/Cheque_Payments__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Payments__c</fullName>
    <label>Cheque Payments</label>
    <length>5</length>
    <type>Text</type>
</CustomField>