force-app/main/default/objects/Project__c/fields/Circle_Rate__c.field-meta.xml
<CustomField>
    <fullName>Circle_Rate__c</fullName>
    <label>Circle Rate</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>