force-app/main/default/objects/Project__c/fields/Completion_status_details__c.field-meta.xml
<CustomField>
    <fullName>Completion_status_details__c</fullName>
    <label>Completion status details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>