force-app/main/default/objects/Project__c/fields/Compounding_Period__c.field-meta.xml
<CustomField>
    <fullName>Compounding_Period__c</fullName>
    <label>Compounding Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>