force-app/main/default/objects/Project__c/fields/Compounding_Period_Starts_From__c.field-meta.xml
<CustomField>
    <fullName>Compounding_Period_Starts_From__c</fullName>
    <label>Compounding Period Starts From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booking Date</fullName>
            </value>
            <value>
                <fullName>Financial Year</fullName>
            </value>
            <value>
                <fullName>First Unpaid Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>