force-app/main/default/objects/Project__c/fields/Const_Stage_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Const_Stage_Grace_Period__c</fullName>
    <label>Const. Stage Grace Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>