force-app/main/default/objects/Project__c/fields/Costsheet_Format__c.field-meta.xml
<CustomField>
    <fullName>Costsheet_Format__c</fullName>
    <label>Costsheet Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CostsheetViewPage_Pinnacle</fullName>
            </value>
            <value>
                <fullName>CostsheetViewPage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>