force-app/main/default/objects/Project__c/fields/CP_Case_L2_Escalation__c.field-meta.xml
<CustomField>
    <fullName>CP_Case_L2_Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Case L2 Escalation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectshMrG</relationshipName>
    <type>Lookup</type>
</CustomField>