force-app/main/default/objects/Project__c/fields/CP_Invoice_Approver_L1__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice_Approver_L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP MIS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects6</relationshipName>
    <type>Lookup</type>
</CustomField>