force-app/main/default/objects/Project__c/fields/CP_Invoice_Approver_L2__c.field-meta.xml
<CustomField>
    <fullName>CP_Invoice_Approver_L2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Invoice Approver L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects7</relationshipName>
    <type>Lookup</type>
</CustomField>