force-app/main/default/objects/Project__c/fields/Create_Call_Notice_After_Dues__c.field-meta.xml
<CustomField>
    <fullName>Create_Call_Notice_After_Dues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Call Notice After Dues</label>
    <type>Checkbox</type>
</CustomField>