force-app/main/default/objects/Project__c/fields/CRM_MIS_Head__c.field-meta.xml
<CustomField>
    <fullName>CRM_MIS_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM MIS Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects5</relationshipName>
    <type>Lookup</type>
</CustomField>