force-app/main/default/objects/Project__c/fields/CRM_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>CRM_Office_Address__c</fullName>
    <label>CRM Office Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>