force-app/main/default/objects/Project__c/fields/CRMHead__c.field-meta.xml
<CustomField>
    <fullName>CRMHead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectCRMHead</relationshipName>
    <type>Lookup</type>
</CustomField>