force-app/main/default/objects/Project__c/fields/Day_1_Whatsapp_Content__c.field-meta.xml
<CustomField>
    <fullName>Day_1_Whatsapp_Content__c</fullName>
    <label>Day 1 - Whatsapp Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>