force-app/main/default/objects/Project__c/fields/Days_from_Dt_of_Booking_for_NPV__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Dt_of_Booking_for_NPV__c</fullName>
    <label>Days from Dt of Booking for NPV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>