force-app/main/default/objects/Project__c/fields/Days_to_Send_Demand__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Send_Demand__c</fullName>
    <label>Days to Send Demand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>