force-app/main/default/objects/Project__c/fields/Deal_Approver__c.field-meta.xml
<CustomField>
    <fullName>Deal_Approver__c</fullName>
    <label>Deal Approver</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ram</fullName>
            </value>
            <value>
                <fullName>Sham</fullName>
            </value>
            <value>
                <fullName>Sita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>