force-app/main/default/objects/Project__c/fields/Default_Bank_A_c_No__c.field-meta.xml
<CustomField>
    <fullName>Default_Bank_A_c_No__c</fullName>
    <label>Default Bank A/c. No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>