force-app/main/default/objects/Project__c/fields/Default_Broker_Relaxation__c.field-meta.xml
<CustomField>
    <fullName>Default_Broker_Relaxation__c</fullName>
    <label>Default Broker Relaxation</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>