force-app/main/default/objects/Project__c/fields/Default_Service_Tax_A_c_No__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Tax_A_c_No__c</fullName>
    <label>Default Service Tax A/c. No.</label>
    <length>11</length>
    <type>Text</type>
</CustomField>