force-app/main/default/objects/Project__c/fields/Discount10_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount10_Type__c</fullName>
    <label>Discount10 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral Passback</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>