force-app/main/default/objects/Project__c/fields/Discount1_Effective_Till__c.field-meta.xml
<CustomField>
    <fullName>Discount1_Effective_Till__c</fullName>
    <label>Discount1 Effective Till</label>
    <type>Date</type>
</CustomField>