force-app/main/default/objects/Project__c/fields/Discount1_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Discount1_Lumpsum__c</fullName>
    <label>Discount1 Lumpsum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>