force-app/main/default/objects/Project__c/fields/Discount1_Per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Discount1_Per_Sq_Ft__c</fullName>
    <label>Discount1 Per Sq.Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>