force-app/main/default/objects/Project__c/fields/Discount2_Effective_Till__c.field-meta.xml
<CustomField>
    <fullName>Discount2_Effective_Till__c</fullName>
    <label>Discount2 Effective Till</label>
    <type>Date</type>
</CustomField>