force-app/main/default/objects/Project__c/fields/Discount2_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Discount2_Lumpsum__c</fullName>
    <label>Discount2 Lumpsum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>