force-app/main/default/objects/Project__c/fields/Discount3_Effective_Till__c.field-meta.xml
<CustomField>
    <fullName>Discount3_Effective_Till__c</fullName>
    <label>Discount3 Effective Till</label>
    <type>Date</type>
</CustomField>