force-app/main/default/objects/Project__c/fields/Discount3_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Discount3_Lumpsum__c</fullName>
    <label>Discount3 Lumpsum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>