force-app/main/default/objects/Project__c/fields/Discount3_Per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Discount3_Per_Sq_Ft__c</fullName>
    <label>Discount3 Per Sq.Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>