force-app/main/default/objects/Project__c/fields/Discount9_Description__c.field-meta.xml
<CustomField>
    <fullName>Discount9_Description__c</fullName>
    <label>Discount9 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>