force-app/main/default/objects/Project__c/fields/Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval__c</fullName>
    <label>Discount Approval</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rohit</fullName>
            </value>
            <value>
                <fullName>Mohit</fullName>
            </value>
            <value>
                <fullName>Sohit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>