force-app/main/default/objects/Project__c/fields/Discount_Link_Option__c.field-meta.xml
<CustomField>
    <fullName>Discount_Link_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Link Option</label>
    <type>Checkbox</type>
</CustomField>