force-app/main/default/objects/Project__c/fields/Discount_to_be_given_On_Timely_Payment__c.field-meta.xml
<CustomField>
    <fullName>Discount_to_be_given_On_Timely_Payment__c</fullName>
    <label>Discount to be given On Timely Payment..</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>