force-app/main/default/objects/Project__c/fields/Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Division_Code__c</fullName>
    <label>Division Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>