force-app/main/default/objects/Project__c/fields/DRS_Contact_Person2__c.field-meta.xml
<CustomField>
    <fullName>DRS_Contact_Person2__c</fullName>
    <label>Contact Person2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>