force-app/main/default/objects/Project__c/fields/Dues_Delay__c.field-meta.xml
<CustomField>
    <fullName>Dues_Delay__c</fullName>
    <label>Dues Delay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>