force-app/main/default/objects/Project__c/fields/E_Brochure_URL__c.field-meta.xml
<CustomField>
    <fullName>E_Brochure_URL__c</fullName>
    <label>E-Brochure URL</label>
    <type>Url</type>
</CustomField>