force-app/main/default/objects/Project__c/fields/Edit_AllotmentCharge__c.field-meta.xml
<CustomField>
    <fullName>Edit_AllotmentCharge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit AllotmentCharge</label>
    <type>Checkbox</type>
</CustomField>