force-app/main/default/objects/Project__c/fields/Edit_Discount_Lumsum__c.field-meta.xml
<CustomField>
    <fullName>Edit_Discount_Lumsum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Discount Lumsum</label>
    <type>Checkbox</type>
</CustomField>