force-app/main/default/objects/Project__c/fields/Edit_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Edit_Premium_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Premium Rate</label>
    <type>Checkbox</type>
</CustomField>