force-app/main/default/objects/Project__c/fields/Enable_E_Sign__c.field-meta.xml
<CustomField>
    <fullName>Enable_E_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable E-Sign</label>
    <type>Checkbox</type>
</CustomField>