force-app/main/default/objects/Project__c/fields/First_Receipt__c.field-meta.xml
<CustomField>
    <fullName>First_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Receipt</label>
    <type>Checkbox</type>
</CustomField>