force-app/main/default/objects/Project__c/fields/Floor_Plans__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plans__c</fullName>
    <label>Floor Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>