force-app/main/default/objects/Project__c/fields/Floor_Plans_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plans_File_Id__c</fullName>
    <label>WhatsApp Bot Floor Plans File Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>