force-app/main/default/objects/Project__c/fields/FM_Team__c.field-meta.xml
<CustomField>
    <fullName>FM_Team__c</fullName>
    <label>FM Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>