force-app/main/default/objects/Project__c/fields/Footer_Image__c.field-meta.xml
<CustomField>
    <fullName>Footer_Image__c</fullName>
    <label>Footer Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>