force-app/main/default/objects/Project__c/fields/Footer_Logo__c.field-meta.xml
<CustomField>
    <fullName>Footer_Logo__c</fullName>
    <label>Footer Logo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>