force-app/main/default/objects/Project__c/fields/Front_Page__c.field-meta.xml
<CustomField>
    <fullName>Front_Page__c</fullName>
    <formula>IMAGE( Project_site_URL__c , &quot;&quot;, 85.97, 90.70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Front Page</label>
    <type>Text</type>
</CustomField>