force-app/main/default/objects/Project__c/fields/Global_Unit_Of_Measuremnet__c.field-meta.xml
<CustomField>
    <fullName>Global_Unit_Of_Measuremnet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Global Unit of Measurement</label>
    <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>