force-app/main/default/objects/Project__c/fields/GST_Percenatge_Discount_Unit__c.field-meta.xml
<CustomField>
    <fullName>GST_Percenatge_Discount_Unit__c</fullName>
    <label>GST Percenatge Discount[Unit]</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>